# quantagent_v2

./: .gitignore  .qa_last_run.json  Architecture.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT_CONTEXT.md  README.md  SPRINT.md  SPRINT_WEEK1.md  SPRINT_WEEK2.md  SPRINT_WEEK3.md  SPRINT_WEEK4.md  alembic.ini  env info.rtf  pyproject.toml  version.py
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_forward_max_r.py  003_shadow_mode_columns.py  004_trade_sl_tp_columns.py  005_oi_snapshots.py  006_cot_cache.py  007_regsho_cache.py  008_cost_tracking.py  009_funding_cost_duration.py  010_trade_quality_columns.py  011_instrument_exchange_columns.py  012_bot_lifecycle_columns.py  013_analytics_tables.py  014_cycle_regime_mode.py
api/: app.py  auth.py  dependencies.py  schemas.py
api/middleware/: rate_limit.py  tenant.py
api/routes/: bots.py  health.py  portfolio.py  positions.py  rules.py  trades.py  trading.py  websocket.py
backtesting/: __init__.py  data_downloader.py  data_loader.py  engine.py  forward_path.py  metrics.py  mock_signals.py  reporter.py  shadow.py  sim_exchange.py  sim_executor.py  tier2_replay.py
backtesting/evals/: __init__.py  _cli.py  auto_miner.py  framework.py  judge.py  judge_rubrics.py  output_contract.py  pipeline_adapter.py  reporter.py  run_eval.py  run_smoke.py  (+2 more)
config/: features.yaml  profiles.yaml  sentinel.yaml
cowork-skills/: quantagent-docs.md  quantagent-pm.md  quantagent-qa.md  quantagent-research.md
deploy/: .env.production.template  README.md  nginx.conf  quantagent.service
distribution/: base.py  discord.py  formatter.py  telegram.py
engine/: bot_manager.py  config.py  events.py  pipeline.py  sl_tp_monitor.py  trader_bot.py  types.py
exchanges/: base.py  binance.py  deribit.py  dydx.py  factory.py  hyperliquid.py
llm/: base.py  cache.py  claude.py  groq.py
mcp/: __init__.py  macro_regime.py  overnight_quant.py
prompts/: judge_system_prompt.txt
quantagent/: __init__.py  main.py  runner.py  version.py
scripts/: cleanup_shadow_bots.py  collect_metrics.py  debug_agents.py  debug_shadow_agents.py  deploy.sh  download_history.py  health_check.py  health_check.sh  migrate_db.py  migrate_shadow_bots.py  mine_eval_scenarios.py  run_backtest.py  run_cycle.py  run_testnet_cycle.py  run_trade.py  seed_dev.py  shadow_report.sql
sentinel/: conditions.py  config.py  macro_aggregator.py  monitor.py  position_manager.py  reaper.py
tracking/: __init__.py  audit.py  data_moat.py  decision.py  financial.py  forward_r.py  health.py
updates (discussed)/: architecture_execution_cost_model_week4.md  architecture_updates_week4.md
(+187 files in other folders)
