[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantagent"
version = "2026.4.2.7.1a1"
description = "QuantAgent v2 — Modular AI-powered trading engine"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "langchain-anthropic",
    "langsmith>=0.1",
    "langgraph",
    "ccxt>=4.0",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "polars>=1.0",
    "cachetools>=5.3",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "apscheduler>=3.10",
    "websockets>=12.0",
    "python-dotenv>=1.0",
    "cot_reports>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
quantagent = "quantagent.main:main"

[tool.setuptools.packages.find]
include = [
    "engine*",
    "sentinel*",
    "exchanges*",
    "llm*",
    "storage*",
    "tracking*",
    "distribution*",
    "mcp*",
    "api*",
    "backtesting*",
    "quantagent*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
